--- a/style.css
+++ b/style.css
@@ -30,13 +30,13 @@ body {
 div.profile {
     overflow: hidden;
     background-color: #00ff00;
-    border-radius: 15px;
     border-style: solid;
     border-color: #0d66bf;
     border-width: 3px;
     margin: 0px;
     height: 40vh;
     width: 40vh;
+    padding: 0px;
 }
 
 canvas.profile {
@@ -60,7 +60,6 @@ canvas.profile {
 div.viewport {
     overflow: hidden;
     background-color: #0000ff;
-    border-radius: 15px;
     border-style: solid;
     border-color: #0d66bf;
     border-width: 3px;
@@ -77,7 +76,6 @@ canvas.viewport {
 
 .controls {
     background-color: #ffffff;
-    border-radius: 15px;
     margin: 2px;
     padding: 10px;
     border-style: solid;
